test/domains/sungeun/rect/equals_plus_illegal.good
equals_plus_illegal.chpl:9: error: Cannot add indices to a rectangular domain
