test/domains/sungeun/rect/equals_plus_illegal.chpl
config const n = 7;

var D1 = {1..n-1};
writeln(D1);

var D2 = {n..2*n};
writeln(D2);

var D3 = D1 + D2;
writeln(D3);

